Update(docker): Added alembic support

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,95 +4,25 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: bash -c "alembic upgrade head && python main.py"
     depends_on:
       - db
+    networks:
+      - app-network
 
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_USER: whbrwvjkkj2323
-      POSTGRES_PASSWORD: s?!]A.~c&Hdx*
+      POSTGRES_USER: your_username
+      POSTGRES_PASSWORD: your_password
       POSTGRES_DB: your_database
     ports:
       - 5432:5432
     volumes:
       - ./data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: your_email@example.com
-      PGADMIN_DEFAULT_PASSWORD: your_password
-    ports:
-      - 8080:80
-    volumes:
-      - ./pgadmin:/var/lib/pgadmin
-    version: '3.8'
-services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - db
-
-  db:
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_USER: whbrwvjkkj2323
-      POSTGRES_PASSWORD: s?!]A.~c&Hdx*
-      POSTGRES_DB: your_database
-    ports:
-      - 5432:5432
-    volumes:
-      - ./data:/var/lib/postgresql/data
-
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: your_email@example.com
-      PGADMIN_DEFAULT_PASSWORD: your_password
-    ports:
-      - 8080:80
-    volumes:
-      - ./pgadmin:/var/lib/pgadmin
-    depends_on:
-      - db
-    version: '3.8'
-services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - db
-
-  db:
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_USER: whbrwvjkkj2323
-      POSTGRES_PASSWORD: s?!]A.~c&Hdx*
-      POSTGRES_DB: your_database
-    ports:
-      - 5432:5432
-    volumes:
-      - ./data:/var/lib/postgresql/data
-
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: your_email@example.com
-      PGADMIN_DEFAULT_PASSWORD: your_password
-    ports:
-      - 8080:80
-    volumes:
-      - ./pgadmin:/var/lib/pgadmin
-    user: "${UID}:${GID}"
-    depends_on:
-      - db
+networks:
+  app-network:
